improved frontend; fix backend output